Agregando libreria framer motion para transiciones, se agrega componente filter que esta encargado de mostrar las cards segun la categoria, y se agrega componente search

--- a/frontend/src/Components/Card/Card.css
+++ b/frontend/src/Components/Card/Card.css
@@ -1,9 +1,9 @@
 .card__container{
-    margin:50px 100px ;
     width: 250px;
     height: 320px;
     background-color: white;
     border-radius: 25px;
+    margin: 0 auto;
 }
 
 .card__container p{
