Agregando scss en todo el proyecto y theming bootstrap

--- a/frontend/src/Components/Steps/Step.scss
+++ b/frontend/src/Components/Steps/Step.scss
@@ -4,7 +4,7 @@
     height: 240px;
     border-radius: 32px;
     padding: 30px 10px 10px;
-    background-color: var(--color-secondary);
+    background-color: var(--bs-secondary);
     display: flex;
     flex-direction: column;
     align-items: center;
