--- a/frontend/src/Components/Navbar/Navbar.scss
+++ b/frontend/src/Components/Navbar/Navbar.scss
@@ -1,5 +1,5 @@
 .navbar-white{
-    background-color: white;
+    background-color: var(--bs-white);
     transition: 0.8s;
 }
 
@@ -19,10 +19,10 @@
     width: 130px;
     text-align: center;
     padding: 2px 10px;
-    background-color: var(--color-blanco);
-    color: var(--color-negro);
+    background-color: var(--bs-white);
+    color: var(--bs-black);
     text-decoration: none;
-    border: 2px solid var(--color-navy-blue);
+    border: 2px solid var(--bs-primary);
     border-radius: 15px;
     font-weight: 700;
 }
