--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -11,7 +11,7 @@
 }
 
 body {
-   background: linear-gradient(to bottom, var(--color-start), var(--color-end));
+   // background: linear-gradient(to bottom, var(--color-start), var(--color-end));
    width: 100%;
    min-height: 100vh;
 }
