--- a/frontend/src/scss/_variables-bootstrap.scss
+++ b/frontend/src/scss/_variables-bootstrap.scss
@@ -1,11 +1,12 @@
 // Colors
-$primary: #253664;
-$secondary: #D4DCEE;
+$primary: #146C94;
+$secondary: #AFD3E2;
+
 
 // Buttons
 $btn-padding-y:               0.25rem;
 $btn-padding-x:               2rem;
-$btn-border-radius:           30px;
+$btn-border-radius:           5px;
 $btn-font-size:               18px;
 $btn-font-weight:             700;
 
