--- a/frontend/src/Components/Filter/Filter.scss
+++ b/frontend/src/Components/Filter/Filter.scss
@@ -1,37 +1,22 @@
-.filter-container {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-row-gap: 1rem;
+.filter-container {    
+    display: flex;
+    justify-content: center;
+    gap: 10px;
     margin-bottom: 2rem;
 
-    @include media-breakpoint-up(sm) {
-        grid-template-columns: repeat(2, 1fr);
-    }
-
-    @include media-breakpoint-up(md) {
-        grid-template-columns: repeat(3, 1fr);
-        grid-column-gap: 1rem;
-    }
-
-    @include media-breakpoint-up(xl) {
-        grid-template-columns: repeat(4, 1fr);
-    }
-
-    @include media-breakpoint-up(xxl) {
-        grid-template-columns: repeat(5, 1fr);
-    }
-
     button {
-        padding: 0.5rem 1rem;
+        padding: 0 10px;
+        color: var(--bs-primary);
         background: var(--bs-secondary);
         border-radius: 10px;
         border: 0;
         font-weight: bold;
         cursor: pointer;
-        width: 100%;
-        font-style: italic;
+        width: 150px;
         &.active {
-            border: 4px solid var(--bs-secondary);
+            color: white;
+            background-color: var(--bs-primary);
+            border: 4px solid var(--bs-primary);
         }        
     }
 }
