--- a/frontend/src/Components/Navbar/Navbar.scss
+++ b/frontend/src/Components/Navbar/Navbar.scss
@@ -3,10 +3,6 @@
     transition: 0.8s;
 }
 
-.navbar-transparent{
-    background-color: transparent;
-    transition: 0.3s;
-}
 
 .navbar__links__flex{
     display: flex;
@@ -15,14 +11,22 @@
     gap: 20px;
 }
 
-.navbar__link{
+.navbar__link-secondary{
     width: 130px;
     text-align: center;
-    padding: 2px 10px;
-    background-color: var(--bs-white);
-    color: var(--bs-black);
+    padding: 10px 10px;
+    color: #27374D;
     text-decoration: none;
-    border: 2px solid var(--bs-primary);
-    border-radius: 15px;
+    font-weight: 700;  
+}
+
+.navbar__link-primary{
+    width: 130px;
+    text-align: center;
+    padding: 10px 10px;
+    border-radius: 10px;
+    background-color: #27374D;
+    color: var(--bs-white);
+    text-decoration: none;
     font-weight: 700;
 }
