--- a/frontend/src/Components/Search/Search.scss
+++ b/frontend/src/Components/Search/Search.scss
@@ -1,15 +1,14 @@
 .search__input {
+
+  padding: 0 1rem;
+  
     .btn {
-      border-top-right-radius: 50px;
-      border-bottom-right-radius: 50px;
       padding-left: 2rem;
       padding-right: 2rem;
     }
 
     .form-control {
-        border: 4px solid var(--bs-primary);
+        border: 2px solid var(--bs-primary);
         background-color: var(--bs-white);
-        border-top-left-radius: 50px;
-        border-bottom-left-radius: 50px;
     }
 }
