Panel de administracion con botones para agregar y listar profesores

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -11,7 +11,10 @@
 }
 
 body {
-   // background: linear-gradient(to bottom, var(--color-start), var(--color-end));
    width: 100%;
    min-height: 100vh;
+}
+
+main {
+   padding-top: 10rem;
 }
