--- a/frontend/src/Routes/Admin/AddTeacherPage/AddTeacherPage.scss
+++ b/frontend/src/Routes/Admin/AddTeacherPage/AddTeacherPage.scss
@@ -5,5 +5,7 @@
         flex-direction: row;
         align-items: center;
         justify-content: center;
+        column-gap: 1rem;
+        min-height: 65vh;
     }
 }
