--- a/frontend/src/Components/Footer/Footer.scss
+++ b/frontend/src/Components/Footer/Footer.scss
@@ -33,6 +33,10 @@
             width: 100px;
         }
 
+        .footer-right{
+            align-items: initial;
+        }
+
         .footer-right p{
             font-size: 13px;
         }
