--- a/frontend/src/Components/Card/Card.scss
+++ b/frontend/src/Components/Card/Card.scss
@@ -18,11 +18,13 @@
     font-weight: 700;
     font-size: 20px;
     margin: 0;
+    text-decoration: none;
 }
 
 .card__container p {
     font-size: 18px !important;
     margin: 0;
     padding-left: 15px;
+    text-decoration: none;
 }
 
