--- a/frontend/src/Components/Card/Card.scss
+++ b/frontend/src/Components/Card/Card.scss
@@ -1,5 +1,5 @@
 .card__container {
-    background-image: url('https://res.cloudinary.com/tuko/image/upload/v1691450282/22_ktgadu.png');
+    background-image: url('https://res.cloudinary.com/tuko/image/upload/v1691591701/14_nrivov.svg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
