--- a/frontend/src/Components/Navbar/Navbar.scss
+++ b/frontend/src/Components/Navbar/Navbar.scss
@@ -3,6 +3,7 @@
     transition: 0.8s;
 }
 
+
 .navbar__links__flex{
     display: flex;
     flex-direction: row !important;
@@ -34,12 +35,29 @@
 
 .user-logo{
     background-color: var(--bs-secondary);
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 100%;
+    text-decoration: none;
+
+    p{
+        margin: 0;
+    }
+}
+
+.user-name{
+    text-decoration: none;
+    color: var(--bs-black);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 3px 15px;
+    border-radius: 2rem;
+    background-color: #DCE0E8;
 
     p{
         margin: 0;
