--- a/frontend/src/Routes/Front/TeacherDetail/TeacherDetail.scss
+++ b/frontend/src/Routes/Front/TeacherDetail/TeacherDetail.scss
@@ -14,7 +14,11 @@
     margin-left: 2rem;
     display: flex;
     flex-direction: column;
-
+    padding: 2rem 0;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    box-shadow: 0px -2px 8px #cacaca;
     .descripcion {
         max-width: 400px;
         margin-top: 0.5rem;
@@ -37,6 +41,8 @@
         width: 100%;
         margin-left: 0;
         align-items: center;
+
+        box-shadow: none;
 
         .descripcion{
             margin: 1rem 0;
