--- a/frontend/src/Components/Admin/DashboardHeader/styles.css
+++ b/frontend/src/Components/Admin/DashboardHeader/styles.css
@@ -1,28 +1,15 @@
 .dashbord-header-container {
     padding: 1em;
+    padding-bottom: 0;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: space-between;
 }
-.dashbord-header-btn {
-    padding: 0.8em;
-    padding-left: 2em;
-    padding-right: 2em;
-    cursor: pointer;
-    color: #FFFFFF;
-    font-size: 0.9rem;
-    font-weight: 700;
-    border-radius: 8px;
-    text-transform: uppercase;
-    border: 1px solid #015C92;
-    background-color: #015C92;
+.dashbord-header-left h1 {
+    color: #146C94;
 }
-.dashbord-header-btn:hover {
-    color: #015C92;
-    border: 1px solid #015C92;
-    background-color: #F0F2F5;
-}
+
 .dashbord-header-right {
     display: flex;
     flex-direction: row;
