--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -27,31 +27,29 @@ main {
    overflow: auto;
 }
 .dashboard-content-container {
-   margin: 1em;
    background-color: white;
    border: none;
    border-radius: 10px;
    padding: 1em;
+   padding-top: 0;
    display: flex;
    flex-direction: column;
    gap:25px;
    overflow: auto;
 }
 .dashboard-content-header {
-   display: flex;
-   align-items: center;
-   flex-direction: row;
-   justify-content: space-between;
+
 }
 
 .dashboard-content-header h2 {
    margin-top: auto;
-   margin-bottom: auto;
-   color: black;
+   margin-bottom: 3rem;
+   color: #526D82;
    font-size: xx-large;
    font-weight: 700;
 }
 .dashboard-content-search {
+   width: 60%;
    font-weight: 400;
    line-height: 1.4em;
    letter-spacing: 0.009em;
