--- a/frontend/src/Components/Search/Search.scss
+++ b/frontend/src/Components/Search/Search.scss
@@ -1,14 +1,42 @@
 .search__input {
 
   padding: 0 1rem;
-  
-    .btn {
-      padding-left: 2rem;
-      padding-right: 2rem;
+
+  .btn {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .form-control {
+    // width: 100% !important;
+    border: 2px solid var(--bs-primary);
+    background-color: var(--bs-white);
+  }
+
+  .form-control-date {
+    margin-left: 10px !important;
+  }
+
+  @include media-breakpoint-down(md){
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+
+    .form-control{
+      width: 80% !important;
+      border-radius: 5px !important;
+    }
+    
+    .form-control-date{
+      margin: 0 !important;
     }
 
-    .form-control {
-        border: 2px solid var(--bs-primary);
-        background-color: var(--bs-white);
+    .btn {
+      border-radius: 0px !important;
     }
+
+  }
+
 }
