--- a/frontend/src/Routes/Front/Category/styles.css
+++ b/frontend/src/Routes/Front/Category/styles.css
@@ -1,3 +1,23 @@
+#search{
+    display: flex;
+    justify-content: center;
+    min-height: calc(100vh - 363px);
+}
+
+.search-container{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.search-title{
+    font-weight: 700;
+}
+
+.search-title span{
+    color: var(--bs-primary);
+}
+
 .grid-container {
     display: grid;
     grid-template-columns: 1fr;
