--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -198,3 +198,10 @@ td span {
 .dashboard-container main {
  padding-top: 0;
 }
+
+.profile-img{
+   border-radius: 100%;
+   width: 50px;
+   height: 50px;
+   object-fit: cover;
+}
