Agregando ruta de favoritos y agregando accion de agregar y eliminar favoritos

--- a/frontend/src/Components/Card/Card.scss
+++ b/frontend/src/Components/Card/Card.scss
@@ -43,5 +43,8 @@
     .card-link {
         text-decoration: none;
         color: white;
+        height: 100%;
+        display: flex;
+        align-items: flex-end;
     }
 }
