--- a/frontend/src/Components/Search/Search.scss
+++ b/frontend/src/Components/Search/Search.scss
@@ -8,7 +8,6 @@
   }
 
   .form-control {
-    // width: 100% !important;
     border: 2px solid var(--bs-primary);
     background-color: var(--bs-white);
   }
@@ -25,7 +24,7 @@
     gap: 10px;
 
     .form-control{
-      width: 80% !important;
+      width: 100% !important;
       border-radius: 5px !important;
     }
     
@@ -35,6 +34,10 @@
 
     .btn {
       border-radius: 0px !important;
+    }
+
+    .rbt{
+      width: 100%;
     }
 
   }
